Use user-defined description seems like a wiser idea

--- a/content/posts/2026-02-27-new-site.md
+++ b/content/posts/2026-02-27-new-site.md
@@ -1,6 +1,7 @@
 ---
 date: "2026-02-27T00:00:00Z"
 title: Welcome to the new redesign!
+desc: Reintroducing my webpage after going through a redesign.
 ---
 
 I havent posted on this site for so long and I plan to do do writeups again. So I decided to gave this site a redesign.
